--- a/style.css
+++ b/style.css
@@ -17,6 +17,16 @@ input {
   border-radius: 5px;
 }
 
+#inputModal {
+  width: 100%;
+  height: 20px;
+  background-color: mintcream;
+  color: rgba(0, 0, 0, 0.61);
+  border: none;
+  border-bottom: 1px solid rgb(20, 20, 20);
+  border-radius: 5px;
+}
+
 strong {
   color: rgba(2, 0, 128, 0.555);
 }
@@ -42,8 +52,8 @@ strong {
   color: rgba(2, 0, 128, 0.555);
 }
 
-#btnEdit {
-  position: absolute;
+.btnExit {
+  float: right;
   width: 45px;
   border-radius: 5px;
   height: 20px;
@@ -51,30 +61,16 @@ strong {
   cursor: pointer;
   border-color: rgba(0, 0, 0, 0.61);
   left: 64rem;
-  top: 100px;
   color: rgba(2, 0, 128, 0.555);
+  margin-right: 5px;
 }
 
-#btnClose {
-    float: right;
-    width: 45px;
-    border-radius: 5px;
-    height: 20px;
-    background-color: mintcream;
-    cursor: pointer;
-    border-color: rgba(0, 0, 0, 0.61);
-    left: 64rem;
-    color: rgba(2, 0, 128, 0.555);
-    margin-right: 5px;
-  }
-  
-  #btnClose:hover,
-  #btnClose:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
-
+.btnExit:hover,
+.btnExit:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
 
 #todo {
   width: 30%;
@@ -96,19 +92,14 @@ strong {
   align-items: center;
   background-color: mintcream;
   color: rgba(0, 0, 0, 0.582);
-
+  text-decoration: none;
 }
-.card .activeCard {
-  background-color: black;
-}
-
-
 
 .card:hover {
   background-color: fuchsia, 0.2;
 }
 
-#btnDelete #btnDone {
+.btnDelete {
   width: 15%;
   border-radius: 5px;
   height: 30px;
@@ -116,10 +107,37 @@ strong {
   cursor: pointer;
   border-color: rgba(0, 0, 0, 0.61);
 }
-#btnDone {
-  background-color: rgba(123, 192, 95, 0.521);
+.btnDone {
+  width: 15%;
+  border-radius: 5px;
+  height: 30px;
+  background-color: mintcream;
+  cursor: pointer;
+  border-color: rgba(0, 0, 0, 0.61);
 }
 
+.btnEdit {
+  width: 15%;
+  border-radius: 5px;
+  height: 30px;
+  background-color: mintcream;
+  cursor: pointer;
+  border-color: rgba(0, 0, 0, 0.61);
+}
+
+.btnModalSubmit {
+  width: 40px;
+  border-radius: 5px;
+  height: 30px;
+  background-color: mintcream;
+  cursor: pointer;
+  border-color: rgba(0, 0, 0, 0.61);
+  color: rgba(2, 0, 128, 0.555);
+}
+
+.card_done {
+  background-color: rgba(123, 192, 95, 0.521);
+}
 
 body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
@@ -132,13 +150,23 @@ h1 {
   color: rgba(43, 29, 82, 0.699);
 }
 
-.myModal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  margin: 0 auto;
-  width: 30%;
-  height: 30%;
-  background-color: rgba(255, 253, 157, 0.534);
-  text-align: center;
+#modal {
+  position: absolute;
+  height: 200px;
+  width: 500px;
+  border: 1px solid black;
+  padding: 10px;
+  top: -250px;
+  left: calc(50% - 260px);
+  transition: 0.3s;
+  background-color: white;
+}
+
+#modal.visible {
+  top: calc(50% - 100px);
+  transition: 0.3s;
+}
+
+#modal.visible #form {
+  width: 100%;
 }
